# physicsnemo-cfd

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: blossom-ci.yml
physicsnemo/cfd/: __init__.py
physicsnemo/cfd/domino_design_sensitivities/: main.py  main_gradient_checking.py  plot_gradient_checking.py
physicsnemo/cfd/hybrid_initialization_tools/: README.md  __init__.py  create_combined_vtu.py  flowfield.py  main.py  merge_and_write_mesh.py
physicsnemo/cfd/inference/: domino_nim.py  launch_local_domino_nim.sh
test/ci_tests/: config.json  copyright.txt  header_check.py
workflows/bench_example/: README.md  generate_pcs_from_stl.py  generate_surface_benchmarks.py  generate_volume_benchmarks.py  setup.sh  utils.py
workflows/bench_example/drivaer_ml_files/: README.md
workflows/bench_example/notebooks/: benchmarking_in_absence_of_gt.ipynb  surface_benchmarking.ipynb  volume_benchmarking.ipynb
workflows/domino_design_sensitivities/: README.md  design_datapipe.py  gradient_checking.ipynb  main.ipynb  main.py  requirements.txt
workflows/domino_design_sensitivities/conf/: config.yaml
workflows/domino_design_sensitivities/utilities/: download.py  mesh_postprocessing.py
workflows/hybrid_initialization_example/: README.md  clean.sh  make_hybrid_initialization.py  openfoam_interactive.sh  prepare_domino_assets.py  run.sh  utils.py
workflows/hybrid_initialization_example/0_org/: U  k  nut  omega  p
workflows/hybrid_initialization_example/assets/: workflow.drawio
workflows/hybrid_initialization_example/constant/: transportProperties  turbulenceProperties
workflows/hybrid_initialization_example/container/: Dockerfile  Makefile  configs.sh
workflows/hybrid_initialization_example/from_domino/: README.md  initialConditions
workflows/hybrid_initialization_example/system/: amgUxpOptions  amgxpOptions  blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  snappyHexMeshDict  topoSetDict  (+1 more)
(+21 files in other folders)
